maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:47: error: not found: value cpt
      setIndication(posX, posY-1, cpt)
                                  ^JediEscaper:49: error: not found: value cpt
      setIndication(posX-1, posY, cpt)
                                  ^JediEscaper:51: error: not found: value cpt
      setIndication(posX, posY+1, cpt)
                                  ^JediEscaper:53: error: not found: value cpt
      setIndication(posX+1, posY, cpt)
                                  ^